# truststore

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  pypy-pytest.ini  test_http_request.py  test_truststore.py  truststore.py
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml  deploy-requirements.in  deploy-requirements.txt  deploy.yml
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst
src/truststore/: __init__.py  _api.py  _macos.py  _openssl.py  _ssl_constants.py  _windows.py
src/truststore/hazmat/: __init__.py  _api.py  _openssl.py
tests/: aiohttp_with_inject.py  conftest.py  requests_with_inject.py  test_api.py  test_custom_ca.py  test_inject.py  test_memory.py  test_sslcontext.py  test_syntax.py  test_threading.py
