[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "truststore"
authors = [
  {name = "Seth Michael Larson", email = "sethmichaellarson@gmail.com"},
  {name = "David Glick", email = "david@glicksoftware.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
requires-python = ">= 3.10"

[project.urls]
Source = "https://github.com/sethmlarson/truststore"
Documentation = "https://truststore.readthedocs.io"

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
  "error",
  "ignore:'cgi' is deprecated",
]
